[project]
name = "pynumber"
version = "0.1.0"
description = "Set-theoretic construction of numbers"
authors = [{ name = "kkinugasa", email = "kimiakikinugasa@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "coverage-badge",
    "mkdocs-material",
    "mkdocstrings-python",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"



[tool.pytest.ini_options]
# When a coverage report is necessary, add this option:
# --cov-report=html
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = true
testpaths = ["tests"]
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
